--- a/alpha/home/templates/base.html
+++ b/alpha/home/templates/base.html
@@ -11,6 +11,7 @@
     <link href="{{STATIC_URL}}styles/styles.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/styles-new.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/widgets.css" rel="stylesheet" type="text/css" />
+    <link href="{{STATIC_URL}}styles/pagination.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}styles/advertising.css" rel="stylesheet" type="text/css" />
     <link href="{{STATIC_URL}}fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" media="screen" />
 
