--- a/alpha/accounts/templates/accounts/_account_featured_events_table.html
+++ b/alpha/accounts/templates/accounts/_account_featured_events_table.html
@@ -2,7 +2,7 @@
 {% load endless %}
 {% load cropping %}
 {% load event_tags %}
-
+{% load common_tags %}
 
 {% paginate 6 events %}
 <div class="account-entry-wrapper entry-wrapper">
@@ -64,26 +64,46 @@
             </p>
         {%endfor%}
     </table>
+
+    {% if pages|length > 1 %}
+        <div class="entry-navigation-np">
+            <p>
+                <ul>
+                    {% get_pages %}
+
+                    <span class="step-links">
+                        {% if pages.current.is_first %}
+                            <span class="prev">
+                                prev
+                            </span>
+                        {% else %}
+                            <a href="{{ pages.previous.url }}" class="prev">
+                                prev
+                            </a>
+                        {% endif %}
+
+                        {% for page in pages %}
+                            {% if page|args:10|call:'is_in_range' %}
+                                <a href="{{ page.url }}"
+                                    class="page{% if page.is_current %} current{%endif%}">
+                                    {{ page.number }}
+                                </a>
+                            {% endif %}
+                        {% endfor %}
+
+                        {% if pages.current.is_last %}
+                            <span class="next">
+                                next
+                            </span>
+                        {% else %}
+                            <a href="{{ pages.next.url }}" class="next">
+                                next
+                            </a>
+                        {% endif %}
+                    </span>
+                </ul>
+            </p>
+        </div>
+    {% endif %}
 </div>
 
-<div class="entry-navigation-np">
-    <p>
-        <ul>
-            {% get_pages %} 
-
-            <span class="step-links">
-                {% if not pages.current.is_first %}                    
-                    <a href="{{ pages.previous.url }}">
-                        <img src="{{STATIC_URL}}images/entry-prev.png">
-                    </a>
-                {% endif %}
-
-                {% if not pages.current.is_last %}                
-                    <a href="{{ pages.next.url }}">
-                        <img src="{{STATIC_URL}}images/entry-next.png">
-                    </a>
-                {% endif %}                
-            </span>
-        </ul>
-    </p>
-</div>
