--- a/alpha/accounts/templates/accounts/_reminder_events_table.html
+++ b/alpha/accounts/templates/accounts/_reminder_events_table.html
@@ -1,45 +1,64 @@
 {% load endless %}
 {% load event_tags %}
+{% load common_tags %}
 
 {% paginate 6 profile.reminder_single_events_in_future  using "reminder_page" as reminder_events %}
 
 <div class="account-entry-wrapper entry-wrapper">
-{% for event in reminder_events %}    
-    <div class="entry-info with-delete-action">
-        {% short_single_event event %}
-        <div class="event-edit-actions">
-            <a href="{% url 'remove_remind_me' event.id %}" class="danger-action">
-                Delete
-            </a>
+    {% for event in reminder_events %}    
+        <div class="entry-info with-delete-action">
+            {% short_single_event event %}
+            <div class="event-edit-actions">
+                <a href="{% url 'remove_remind_me' event.id %}" class="danger-action">
+                    Delete
+                </a>
+            </div>
+
+            <div class="clr"></div>
         </div>
+    {% empty %}
+        <p>
+            no reminder events
+        </p>
+    {%endfor%}
+    {% if pages|length > 1 %}
+        <div class="entry-navigation-np">
+            <p>
+                <ul>
+                    {% get_pages %}
 
-        <div class="clr"></div>
-    </div>
-{% empty %}
-    <p>
-        no reminder events
-    </p>
-{%endfor%}
+                    <span class="step-links">
+                        {% if pages.current.is_first %}
+                            <span class="prev">
+                                prev
+                            </span>
+                        {% else %}
+                            <a href="{{ pages.previous.url }}" class="prev">
+                                prev
+                            </a>
+                        {% endif %}
+
+                        {% for page in pages %}
+                            {% if page|args:10|call:'is_in_range' %}
+                                <a href="{{ page.url }}"
+                                    class="page{% if page.is_current %} current{%endif%}">
+                                    {{ page.number }}
+                                </a>
+                            {% endif %}
+                        {% endfor %}
+
+                        {% if pages.current.is_last %}
+                            <span class="next">
+                                next
+                            </span>
+                        {% else %}
+                            <a href="{{ pages.next.url }}" class="next">
+                                next
+                            </a>
+                        {% endif %}
+                    </span>
+                </ul>
+            </p>
+        </div>
+    {% endif %}
 </div>
-
-{% if pages|length > 1 %}
-    <div class="profile-table-pagination">
-        <span class="pagintation-wrapper">
-            {% get_pages %}
-            {% if pages.current.is_first %}
-                <span class="prev"></span>            
-            {% else %}
-                <a class="prev" href="{{ pages.previous.url }}"></a>
-            {% endif %}
-            <span class="page-info">
-                {{ pages.current }} of {{ pages|length }}
-            </span>
-
-            {% if pages.current.is_last %}
-                <span class="next"></span>                    
-            {% else %}
-                <a class="next" href="{{ pages.next.url }}"></a>
-            {% endif %}
-        </span>        
-    </div>
-{% endif %}
