--- a/alpha/event/static/styles/profile-table.css
+++ b/alpha/event/static/styles/profile-table.css
@@ -65,10 +65,8 @@
 }
 
 a.remove-button {
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background: url("/static/images/accounts/remove16x16.png") no-repeat;
+    color: red;
+    font-size: 14px;
 }
 
 a.add-button {
