Improve my account page

--- a/alpha/accounts/static/styles/accounts/accounts.css
+++ b/alpha/accounts/static/styles/accounts/accounts.css
@@ -854,3 +854,7 @@
 .account-help-container ul li a {
     color: #fff;
 }
+
+.account-featured-table .entry-info .entry-details-wrapper {
+    width: 120px;
+}
