--- a/alpha/accounts/templates/userena/signin_form.html
+++ b/alpha/accounts/templates/userena/signin_form.html
@@ -4,42 +4,52 @@
 
 {% block title %}{% trans "Signin" %}{% endblock %}
 
-{% block content %}
-    <div class="center-align-wrapper">
-        <div class="account-form-wrapper">
-            <form action="" method="post">
-                {% csrf_token %}
-                {{ form.non_field_errors }}
+{% block head %}
+    <script src="{{STATIC_URL}}js/accounts/userena.js" type="text/javascript"></script>
+{% endblock head %}
 
-                {% for field in form %}                    
-                    {% if field.name == 'remember_me' %}
-                    {% else %}
-                        <div>
-                            {{ field }}
-                            {{ field.errors }}
+{% block content %}
+    <div class="stretch-wrapper">
+        <div class="center-align-wrapper">
+            <div class="account-form-wrapper">
+                <form action="" method="post">
+                    {% csrf_token %}
+                    {{ form.non_field_errors }}
+
+                    <div class="user-identification" data-placeholder="{{ form.identification.label }}">
+		                {{ form.identification }}
+                        {{ form.identification.errors }}
+                    </div>
+
+                    <div class="user-password" data-placeholder="{{ form.password.label }}">
+                        {{ form.password }}
+                        {{ form.password.errors }}
+                    </div>
+
+                    <div class="forgot-password">
+                        <a href="{% url 'userena_password_reset' %}" title="{% trans 'Forgot your password?' %}">
+                            {% trans "Forgot your password?" %}
+                        </a>
+                    </div>
+                    <div class="remember_me">
+                        {{ form.remember_me.label }}
+                        <div class="checkbox">
+                            {{ form.remember_me }}
+                            <label for="id_{{ form.remember_me.name }}"></label>
                         </div>
+                    </div>
+                    {{ form.remember_me.errors }}
+
+                    {% if next %}
+                        <input type="hidden" name="next" value="{{ next }}" />
                     {% endif %}
 
-                {% endfor %}
-
-                <p class="forgot-password">
-                    <a href="{% url 'userena_password_reset' %}" title="{% trans 'Forgot your password?' %}">
-                        {% trans "Forgot your password?" %}
-                    </a>
-                    {{ form.remember_me.label }}
-                    <div class="checkbox">
-                        {{ form.remember_me }}
-                        <label for="id_{{ form.remember_me.name }}"></label>
-                    </div>
-                </p>
-                {{ form.remember_me.errors }}
-
-                {% if next %}
-                    <input type="hidden" name="next" value="{{ next }}" />
-                {% endif %}
-
-                <input type="submit" class="submit standart button" value="Log In" />
-            </form>
+                    <input type="submit" class="submit standart button log-in-button" value="Log In" />
+                </form>
+            </div>
         </div>
     </div>
+    <script type="text/javascript">
+        $("doc")
+    </script>
 {% endblock %}
