--- a/alpha/accounts/templates/userena/signup_form.html
+++ b/alpha/accounts/templates/userena/signup_form.html
@@ -3,34 +3,27 @@
 
 {% block title %}{% trans "Signup" %}{% endblock %}
 
+{% block head %}
+    <script src="{{STATIC_URL}}js/accounts/userena.js" type="text/javascript"></script>
+{% endblock head %}
+
 {% block content %}
-<h1>{% trans "Signup" %}</h1>
-<div class="content account-options-wrapper">
-    <div class="main-content account-options">
-        <form action="" method="post">
-            {% csrf_token %}            
-            {{ form.non_field_errors }}
-            <div class="options options-userena">
-                <table>                                
+    <div class="stretch-wrapper">
+        <div class="center-align-wrapper">
+            <div class="account-form-wrapper">
+                <form action="" method="post">
+                    {% csrf_token %}
+                    {{ form.non_field_errors }}
+
                     {% for field in form %}
-                        <tr>
-                            <td colspan=2 >
-                                {{ field.errors }}
-                            </td>
-                        </tr>
-                        <tr>                            
-                            <td class="first">
-                                {{ field.label_tag }}
-                            </td>
-                            <td>
-                                {{ field }}
-                            </td>                            
-                        </tr>
+                        <div class="userena-input no-icon" data-placeholder="{{ field.label }}">
+                            {{ field }}
+                            {{ field.errors }}
+                        </div>
                     {% endfor %}
-                </table>
-            </div>          
-            <input type="submit" class="submit standart button" value="{% trans "Signup"%}" />
-        </form>
+                    <input type="submit" class="submit standart button userena-button" value="{% trans "Signup"%}" />
+                </form>
+            </div>
+        </div>
     </div>
-</div>
 {% endblock %}
